hphp/test/zend/bad/ext-spl/SplFixedArray_fromArray_invalid_parameter_002.php
<?php
echo SplFixedArray::fromArray('hello');
?>